@@ -2,11 +2,12 @@ package au.com.mineauz.minigames.minigame;
 
 import au.com.mineauz.minigames.MinigameUtils;
 import au.com.mineauz.minigames.Minigames;
+import au.com.mineauz.minigames.managers.language.langkeys.MgMenuLangKey;
 import au.com.mineauz.minigames.menu.*;
 import au.com.mineauz.minigames.objects.MinigamePlayer;
 import au.com.mineauz.minigames.stats.*;
 import com.google.common.base.Preconditions;
-import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.apache.commons.text.WordUtils;
 import org.bukkit.*;
@@ -19,8 +20,6 @@ import org.bukkit.block.sign.Side;
 import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.metadata.FixedMetadataValue;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -33,7 +32,7 @@ public class ScoreboardDisplay {
     private final int height;
     private final BlockFace facing;
     private MinigameStat stat;
-    private StatValueField field;
+    private StatisticValueField field;
     private ScoreboardOrder order;
     private StatSettings settings;
 
@@ -49,8 +48,8 @@ public class ScoreboardDisplay {
         this.facing = facing;
 
         // Default values
-        stat = MinigameStats.Wins;
-        field = StatValueField.Total;
+        stat = MinigameStatistics.Wins;
+        field = StatisticValueField.Total;
         order = ScoreboardOrder.DESCENDING;
 
         stats = new ArrayList<>(width * height * 2);
@@ -70,8 +69,8 @@ public class ScoreboardDisplay {
 
         ScoreboardDisplay display = new ScoreboardDisplay(minigame, width, height, location, facing);
         display.setOrder(ScoreboardOrder.valueOf(section.getString("order")));
-        MinigameStat stat = MinigameStats.getStat(section.getString("stat", "wins"));
-        StatValueField field = StatValueField.valueOf(section.getString("field", "Total"));
+        MinigameStat stat = MinigameStatistics.getStat(section.getString("stat", "wins"));
+        StatisticValueField field = StatisticValueField.valueOf(section.getString("field", "Total"));
         display.setStat(stat, field);
         Block block = location.getBlock();
         block.setMetadata("MGScoreboardSign", new FixedMetadataValue(Minigames.getPlugin(), true));
@@ -88,11 +87,11 @@ public class ScoreboardDisplay {
         return stat;
     }
 
-    public StatValueField getField() {
+    public StatisticValueField getField() {
         return field;
     }
 
-    public void setStat(MinigameStat stat, StatValueField field) {
+    public void setStat(MinigameStat stat, StatisticValueField field) {
         this.stat = stat;
         this.field = field;
     }
@@ -204,17 +203,17 @@ public class ScoreboardDisplay {
     }
 
     public void displayMenu(MinigamePlayer player) {
-        final Menu setupMenu = new Menu(3, "Setup Scoreboard", player);
+        final Menu setupMenu = new Menu(3, MgMenuLangKey.MENU_SCOREBOARD_SETUP_NAME, player);
 
         StatSettings settings = minigame.getSettings(stat);
-        final MenuItemCustom statisticChoice = new MenuItemCustom(Material.WRITABLE_BOOK, "Statistic",
-                List.of(settings.getDisplayName()));
+        final MenuItemCustom statisticChoice = new MenuItemCustom(Material.WRITABLE_BOOK, MgMenuLangKey.MENU_SCOREBOARD_STATISTIC_NAME,
+                List.of(settings.getDisplayName().color(NamedTextColor.GREEN)));
 
-        final MenuItemCustom fieldChoice = new MenuItemCustom(Material.PAPER, "Statistic Field",
+        final MenuItemCustom fieldChoice = new MenuItemCustom(Material.PAPER, MgMenuLangKey.MENU_SCOREBOARD_STATISTIC_FIELD_NAME,
                 List.of(field.getTitle().color(NamedTextColor.GREEN)));
 
         statisticChoice.setClick(() -> {
-            Menu childMenu = MinigameStats.createStatSelectMenu(setupMenu, new Callback<>() {
+            Menu childMenu = MinigameStatistics.createStatSelectMenu(setupMenu, new Callback<>() {
                 @Override
                 public MinigameStat getValue() {
                     throw new UnsupportedOperationException();
@@ -227,9 +226,9 @@ public class ScoreboardDisplay {
                     statisticChoice.setBaseDescriptionPart(List.of(settings12.getDisplayName().color(NamedTextColor.GREEN)));
 
                     // Check that the field is valid
-                    StatValueField first = null;
+                    StatisticValueField first = null;
                     boolean valid = false;
-                    for (StatValueField sfield : settings12.getFormat().getFields()) {
+                    for (StatisticValueField sfield : settings12.getFormat().getFields()) {
                         if (first == null) {
                             first = sfield;
                         }
@@ -243,7 +242,7 @@ public class ScoreboardDisplay {
                     // Update the field
                     if (!valid) {
                         field = first;
-                        fieldChoice.setBaseDescriptionPart(List.of(ChatColor.GREEN + value.toString()));
+                        fieldChoice.setBaseDescriptionPart(List.of(value.getDisplayName().color(NamedTextColor.GREEN)));
                     }
                 }
             });
@@ -254,16 +253,16 @@ public class ScoreboardDisplay {
 
         fieldChoice.setClick(() -> {
             StatSettings settings1 = minigame.getSettings(stat);
-            Menu childMenu = MinigameStats.createStatFieldSelectMenu(setupMenu, settings1.getFormat(), new Callback<>() {
+            Menu childMenu = MinigameStatistics.createStatFieldSelectMenu(setupMenu, settings1.getFormat(), new Callback<>() {
                 @Override
-                public StatValueField getValue() {
+                public StatisticValueField getValue() {
                     throw new UnsupportedOperationException();
                 }
 
                 @Override
-                public void setValue(StatValueField value) {
+                public void setValue(StatisticValueField value) {
                     field = value;
-                    fieldChoice.setBaseDescriptionPart(Collections.singletonList(ChatColor.GREEN + value.getTitle()));
+                    fieldChoice.setBaseDescriptionPart(List.of(value.getTitle().color(NamedTextColor.GREEN)));
                 }
             });
 
@@ -274,25 +273,21 @@ public class ScoreboardDisplay {
         setupMenu.addItem(statisticChoice);
         setupMenu.addItem(fieldChoice);
 
-        List<String> sbotypes = new ArrayList<>();
-        for (ScoreboardOrder o : ScoreboardOrder.values()) {
-            sbotypes.add(o.toString().toLowerCase());
-        }
-        setupMenu.addItem(new MenuItemList("Scoreboard Order", Material.ENDER_PEARL, new Callback<>() {
+        setupMenu.addItem(new MenuItemEnum<>(Material.ENDER_PEARL, MgMenuLangKey.MENU_SCOREBOARD_ORDER_NAME, new Callback<>() {
 
             @Override
-            public String getValue() {
-                return order.toString().toLowerCase();
+            public ScoreboardOrder getValue() {
+                return order;
             }
 
             @Override
-            public void setValue(String value) {
-                order = ScoreboardOrder.valueOf(value.toUpperCase());
+            public void setValue(ScoreboardOrder value) {
+                order = value;
             }
+        }, ScoreboardOrder.class));
 
-
-        }, sbotypes));
-        setupMenu.addItem(new MenuItemScoreboardSave(MenuUtility.getCreateMaterial(), "Create Scoreboard", this), setupMenu.getSize() - 1);
+        setupMenu.addItem(new MenuItemScoreboardSave(MenuUtility.getCreateMaterial(), MgMenuLangKey.MENU_SCOREBOARD_CREATE_NAME, this),
+                setupMenu.getSize() - 1);
         setupMenu.displayMenu(player);
     }
 
@@ -344,11 +339,10 @@ public class ScoreboardDisplay {
         if (Tag.ALL_SIGNS.isTagged(root.getType())) {
             BlockState state = root.getState();
             if (state instanceof Sign sign) {
-
                 sign.getSide(Side.FRONT).line(0, minigame.getDisplayName().color(NamedTextColor.BLUE));
                 sign.getSide(Side.FRONT).line(1, settings.getDisplayName().color(NamedTextColor.GREEN));
-                sign.getSide(Side.FRONT).line(2, ChatColor.GREEN + field.getTitle());
-                sign.getSide(Side.FRONT).line(3, "(" + WordUtils.capitalizeFully(order.toString()) + ")");
+                sign.getSide(Side.FRONT).line(2, field.getTitle().color(NamedTextColor.GREEN));
+                sign.getSide(Side.FRONT).line(3, Component.text("(" + WordUtils.capitalizeFully(order.toString()) + ")"));
                 sign.update();
 
                 sign.setMetadata("MGScoreboardSign", new FixedMetadataValue(Minigames.getPlugin(), true));
@@ -373,7 +367,7 @@ public class ScoreboardDisplay {
                 updateSigns();
             } else {
                 Minigames.getCmpnntLogger().error("Error when loading scoreboard " + stat.getDisplayName() + " for minigame " + minigame.getName(false), exp);
-                stats = Collections.emptyList();
+                stats = List.of();
                 needsLoad = true;
             }
         }));
